# piper-sdk-rs

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  README.zh-CN.md  justfile  rustfmt.toml
addons/piper-physics-mujoco/: Cargo.toml  README.md  build.rs
addons/piper-physics-mujoco/docs/: dual_arm_bilateral_robot_guide.md
addons/piper-physics-mujoco/examples/: dual_arm_bilateral_mujoco.rs  gravity_compensation_mujoco.rs  gravity_compensation_robot.rs
addons/piper-physics-mujoco/src/: dual_arm.rs  end_effector.rs  error.rs  lib.rs  mujoco.rs  runner.rs  traits.rs  types.rs
addons/piper-svs-collect/: Cargo.toml  README.md
addons/piper-svs-collect/profiles/: peg_insertion.toml  surface_following.toml  wiping.toml
addons/piper-svs-collect/src/: args.rs  calibration.rs  cancel.rs  collector.rs  controller.rs  cue.rs  lib.rs  main.rs  model_hash.rs  mujoco_bridge.rs  profile.rs  raw_can.rs  raw_clock.rs  stiffness.rs  target.rs  tick_frame.rs
addons/piper-svs-collect/src/episode/: manifest.rs  mod.rs  wire.rs  writer.rs
addons/piper-svs-collect/tests/: collector_fake.rs  dependency_boundaries.rs
apps/cli/: Cargo.toml  FINAL_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE2_SCRIPT_COMPLETE.md  PHASE3_COMPLETE.md  PROGRESS.md  README.md  REPL_IMPLEMENTATION.md  TELEOP_DUAL_ARM.md
apps/cli/examples/: README.md  move_sequence.json  test_sequence.json
apps/cli/src/: connection.rs  main.rs  parsing.rs  safety.rs  script.rs  utils.rs  validation.rs  validation.rs.bak
apps/cli/src/commands/: collision_protection.rs  config.rs  gravity.rs  home.rs  mod.rs  move.rs  park.rs  position.rs  record.rs  replay.rs  run.rs  set_zero.rs  stop.rs  teleop.rs
apps/cli/src/gravity/: artifact.rs  compensation.rs  eval.rs  fit.rs  mod.rs  model.rs  record_path.rs  replay_sample.rs
apps/cli/src/modes/: mod.rs  oneshot.rs  repl.rs
apps/cli/src/teleop/: calibration.rs  config.rs  console.rs  controller.rs  mod.rs  report.rs  target.rs  workflow.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: client_manager.rs  daemon.rs  macos_qos.rs  main.rs  mod.rs  session_manager.rs  singleton.rs
crates/piper-can/: Cargo.toml  README.md
crates/piper-can/src/: lib.rs  mock.rs  raw_timestamp.rs
crates/piper-can/src/gs_usb/: classify.rs  device.rs  error.rs  frame.rs  mod.rs  split.rs
crates/piper-can/src/gs_usb_bridge/: mod.rs  protocol.rs
crates/piper-can/src/gs_usb_udp/: mod.rs  protocol.rs
crates/piper-can/src/socketcan/: interface_check.rs  mod.rs  raw_frame.rs  split.rs
crates/piper-client/: Cargo.toml
crates/piper-client/src/: bridge.rs  bridge_host.rs  builder.rs  connection.rs  diagnostics.rs  dual_arm.rs  dual_arm_raw_clock.rs  heartbeat.rs  lib.rs  observer.rs  raw_commander.rs  recording.rs  recording_tests.rs
crates/piper-client/src/control/: controller.rs  hot_path_diagnostics.rs  loop_runner.rs  (+8 more)
crates/piper-control/: Cargo.toml
crates/piper-control/src/: lib.rs  profile.rs  target.rs  workflow.rs
crates/piper-driver/: Cargo.toml
crates/piper-driver/src/: builder.rs  command.rs  diagnostics.rs  error.rs  heartbeat.rs  hooks.rs  lib.rs  metrics.rs  mode.rs  observation.rs  pipeline.rs  piper.rs  query_coordinator.rs  recording.rs  state.rs  test_support.rs
crates/piper-physics/: Cargo.toml  README.md  build.rs
crates/piper-physics/assets/: piper_description.urdf  piper_no_gripper.xml
crates/piper-physics/examples/: gravity_compensation_analytical.rs  gravity_compensation_mujoco.rs  gravity_compensation_robot.rs
crates/piper-physics/src/: analytical.rs  error.rs  lib.rs  mujoco.rs  traits.rs
crates/piper-physics/tests/: integration_tests.rs
crates/piper-protocol/: Cargo.toml
crates/piper-protocol/src/: config.rs  constants.rs  control.rs  diagnostics.rs  feedback.rs  frame.rs  ids.rs  lib.rs
crates/piper-protocol/tests/: frame_compile_fail.rs  frame_serde.rs  frame_type_safety.rs  protocol_format_awareness.rs
crates/piper-sdk/: Cargo.toml
crates/piper-sdk/examples/: PERFORMANCE_TEST.md  README.md  bridge_latency_bench.rs  bridge_test.rs  client_monitor_hil_check.rs  custom_diagnostics.rs  daemon_latency_bench.rs  dual_arm_bilateral_control.rs  embedded_bridge_host.rs  frame_dump.rs  gs_usb_bridge_test.rs  gs_usb_direct_test.rs  gs_usb_udp_test.rs  high_level_gripper_control.rs  high_level_pid_control.rs  high_level_simple_move.rs  high_level_trajectory_demo.rs  hil_cartesian_pose_check.rs  hil_circular_motion_check.rs  hil_gripper_check.rs  hil_joint_position_check.rs  hil_linear_motion_check.rs  hil_mit_hold_check.rs  hil_replay_mode_check.rs  iface_check.rs  multi_threaded_demo.rs  position_control_demo.rs  realtime_control_demo.rs  replay_mode.rs  robot_monitor.rs  socketcan_raw_clock_probe.rs  standard_recording.rs  state_api_demo.rs  timestamp_verification.rs
crates/piper-sdk/src/: lib.rs  prelude.rs
crates/piper-sdk/tests/: README.md  command_priority_tests.rs  command_priority_tests.rs.bak  gs_usb_debug_scan.rs  gs_usb_integration_tests.rs  gs_usb_performance_tests.rs  gs_usb_stage1_loopback_tests.rs  high_level_integration_v2.rs  high_level_test_infrastructure.rs  logger_init_concurrent.rs  logger_init_idempotent.rs  logger_init_log_only_host.rs  logger_init_preinitialized.rs  logger_init_rust_log_filter.rs  logger_init_rust_log_filter_debug.rs  logger_init_rust_log_filter_target.rs  logger_init_scoped_active.rs  logger_init_scoped_after_drop.rs  observation_api_tests.rs  performance_regression_tests.rs  performance_regression_tests.rs.bak  pipeline_performance_tests.rs  pipeline_performance_tests.rs.bak  realtime_benchmark_tests.rs  realtime_benchmark_tests.rs.bak  robot_integration_tests.rs  robot_performance_tests.rs  robot_protocol_tests.rs  robot_state_concurrent_tests.rs  robot_state_performance_tests.rs  thread_isolation_tests.rs  thread_isolation_tests.rs.bak  timeout_convergence_tests.rs
crates/piper-tools/: Cargo.toml  README.md
crates/piper-tools/src/: lib.rs  raw_clock.rs  recording.rs  safety.rs  statistics.rs  timestamp.rs
(+543 files in other folders)
