[package]
name = "piper-sdk"
version = "0.0.2"
edition = "2024"
authors = ["Ming Yang"]
license = "MIT"
description = "High-performance cross-platform (Linux/Windows/macOS) Rust SDK for AgileX Piper Robot Arm with support for high-frequency force control"
repository = "https://github.com/vivym/piper-sdk-rs"
readme = "README.md"
keywords = ["robot", "piper", "can", "arm", "control"]
categories = ["hardware-support"]
exclude = ["tmp/", "docs", "target/"]

[dependencies]
arc-swap = "1.8.0"
bilge = "0.3.0"
bytes = "1.11.0"
crossbeam-channel = "0.5.15"
rusb = { version = "0.9.4", features = ["vendored"] }
thiserror = "2.0.17"
tracing = "0.1.44"
ctrlc = "3.5"
thread-priority = { version = "3.0.0", optional = true }
spin_sleep = "1.3.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "1.15.1"

clap = { version = "4.5", features = ["derive"] }
fs4 = { version = "0.13", features = ["sync"] }

[features]
default = []
realtime = ["thread-priority"]
serde = ["dep:serde"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["uio", "socket", "poll"] }
socketcan = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs"] }

[[bin]]
name = "gs_usb_daemon"
path = "src/bin/gs_usb_daemon/main.rs"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
rand = "0.8"
criterion = "0.5"
proptest = "1.4"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
