[workspace]
resolver = "2"
members = [
    "crates/piper-protocol",
    "crates/piper-can",
    "crates/piper-driver",
    "crates/piper-client",
    "crates/piper-sdk",
    "crates/piper-tools",
    "apps/daemon",
    "apps/cli",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
authors = ["Ming Yang"]
license = "MIT"
repository = "https://github.com/vivym/piper-sdk-rs"
readme = "README.md"
keywords = ["robot", "piper", "can", "arm", "control"]
categories = ["hardware-support"]

[workspace.dependencies]
# 内部 crates
piper-protocol = { path = "crates/piper-protocol" }
piper-can = { path = "crates/piper-can" }
piper-driver = { path = "crates/piper-driver" }
piper-client = { path = "crates/piper-client" }
piper-sdk = { path = "crates/piper-sdk" }
piper-tools = { path = "crates/piper-tools" }

# 协议层外部依赖
bilge = "0.3.0"
num_enum = "0.7"
thiserror = "2.0.17"

# 并发和状态管理
arc-swap = "1.8.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12"
spin_sleep = "1.3.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11.0"

# 版本解析（用于固件版本兼容性检查）
semver = "1.0"

# 工具库
smallvec = "1.15.1"

# 日志
tracing = "0.1.44"
tracing-subscriber = "0.3.19"

# CLI
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"

# 文件系统
fs4 = { version = "0.13", features = ["sync"] }

# 平台特定依赖（所有平台都声明，具体 crate 按需选择）
libc = "0.2"
nix = "0.30"
socketcan = "3.5"
rusb = { version = "0.9.4", features = ["vendored"] }
thread-priority = "1.0"

# 开发依赖
rand = "0.8"
criterion = "0.5"
proptest = "1.4"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

# Workspace 发布配置（用于 cargo-release 工具）
[workspace.metadata.release]
# 统一的 tag 命名格式（避免 piper-protocol-v0.1.0 这样的冲突）
tag-name = "v{{version}}"

# 将所有 crate 的提交合并为一个（原子操作）
consolidate-commits = true

# 将所有 crate 的推送合并为一个
consolidate-pushes = true

# 发布前先运行所有测试
pre-release-hook = ["cargo", "test", "--workspace"]

# 推送 tag 到远程
push = true

# 发布到 crates.io
publish = true

# 不为每个 crate 创建单独的 tag（只创建一个 workspace 级别的 tag）
shared-version = true
