[package]
name = "piper-physics"
version = "0.0.3"
edition = "2024"
authors = ["Ming Yang"]
license = "MIT"
repository = "https://github.com/vivym/piper-sdk-rs"
description = "Physics calculations for Piper robot including gravity compensation"

[dependencies]
piper-sdk = { version = "0.0.3", path = "../../crates/piper-sdk" }

# 必选依赖（通过 re-export 模式）
nalgebra = { version = "0.32", features = ["std"] }
mujoco-rs = { version = "2.3" }  # MuJoCo physics engine (下载由 just 处理)
sha2 = "0.10"
libc = "0.2"

# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"

[build-dependencies]
# 极简版 build.rs（只处理 RPATH），无需额外依赖

[dev-dependencies]
# 用于测试
piper-sdk = { version = "0.0.3", path = "../../crates/piper-sdk" }
env_logger = "0.10"
approx = "0.5"
clap = { version = "4.5", features = ["derive"] }

# 用于真实机械臂控制的example
ctrlc = "3.4"

[workspace]
