[package]
name = "piper-svs-collect"
version = "0.0.3"
edition = "2024"
authors = ["Ming Yang"]
license = "MIT"
repository = "https://github.com/vivym/piper-sdk-rs"
description = "SVSPolicy data-collection teleoperation collector for Piper dual-arm setups"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5"
nalgebra = { version = "0.32", features = ["std"] }
piper-client = { path = "../../crates/piper-client", version = "0.0.3", default-features = false, features = ["socketcan"] }
piper-control = { path = "../../crates/piper-control", version = "0.0.3" }
piper-driver = { path = "../../crates/piper-driver", version = "0.0.3", default-features = false, features = ["socketcan"] }
piper-physics = { path = "../piper-physics-mujoco", version = "0.0.3" }
piper-sdk = { path = "../../crates/piper-sdk", version = "0.0.3", default-features = false, features = ["socketcan"] }
piper-tools = { path = "../../crates/piper-tools", version = "0.0.3" }
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
getrandom = "0.3"
libc = "0.2"
tempfile = "3.24"
thiserror = "2.0.17"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[workspace]
