[package]
name = "gs_usb_daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gs_usb_daemon"
path = "src/main.rs"

[dependencies]
piper-sdk = { workspace = true }
piper-driver = { workspace = true }
piper-protocol = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
fs4 = { workspace = true }
libc = { workspace = true }
# ✅ XDG Base Directory 规范（跨平台临时目录）
dirs = "6.0"
# ✅ 系统信息（CPU 使用率监控）
sysinfo = "0.38"
