[package]
name = "gs_usb_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daemon for GS-USB CAN adapter management"
publish = false

[[bin]]
name = "gs_usb_daemon"
path = "src/main.rs"

[dependencies]
piper-can = { workspace = true }
piper-sdk = { workspace = true }
piper-driver = { workspace = true }
piper-protocol = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# ✅ 非阻塞日志持久化（文件输出 + 每日轮转）
tracing-appender = "0.2"
clap = { workspace = true }
ctrlc = { workspace = true }
fs4 = { workspace = true }
libc = { workspace = true }
# ✅ XDG Base Directory 规范（跨平台临时目录）
dirs = "6.0"
# ✅ 系统信息（CPU 使用率监控）
sysinfo = "0.38"
