[package]
name = "piper-can"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CAN bus adapter abstraction layer supporting SocketCAN and GS-USB"

[features]
default = ["auto-backend"]  # 默认启用自动后端选择

# 自动后端选择（平台相关）
# Linux: socketcan + gs_usb, 其他平台: gs_usb
# 注意：socketcan 在 Linux 上由 target_cfg 自动提供，不需要 feature 启用
auto-backend = ["dep:rusb"]

# 显式后端选择（可选，用于测试）
# socketcan: 仅作为标记，实际依赖由 target_cfg 控制
# gs_usb: 显式启用
socketcan = []
gs_usb = ["dep:rusb"]

# Mock 模式（无硬件依赖，优先级最高）
mock = []

# Serde 序列化支持
serde = ["dep:serde", "piper-protocol/serde"]

[dependencies]
piper-protocol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, optional = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# ⚠️ 重要：平台特定依赖
# Linux: socketcan 和 nix 始终可用（非 optional），由 cfg 控制是否编译模块
#      这样可以避免 feature 在跨平台时的依赖解析问题
# 其他平台: socketcan 和 nix 不存在
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.5"
nix = { version = "0.30", features = ["poll", "socket", "uio"] }
libc = { workspace = true }
rusb = { workspace = true, optional = true, features = ["vendored"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rusb = { workspace = true, optional = true, features = ["vendored"] }
libc = { workspace = true }

# docs.rs 配置：生成所有平台的文档
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
rcgen = { workspace = true }
