[package]
name = "piper-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level type-safe API with type state pattern for Piper robot control"
readme = "../../README.md"

[features]
default = []
serde = ["dep:serde", "piper-protocol/serde"]

[dependencies]
piper-driver = { workspace = true }
piper-can = { workspace = true }
piper-protocol = { workspace = true }
piper-tools = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
spin_sleep = { workspace = true }
crossbeam-channel = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, optional = true }
hex = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
sha2 = { workspace = true }
mio = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
serial_test = { workspace = true }
