[package]
name = "piper-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level type-safe API with type state pattern for Piper robot control"
readme = "../../README.md"

[features]
default = ["auto-backend"]
serde = ["dep:serde", "piper-can/serde", "piper-protocol/serde"]
mock = ["piper-can/mock", "piper-driver/mock"]
auto-backend = ["piper-can/auto-backend", "piper-driver/auto-backend"]
socketcan = ["piper-can/socketcan", "piper-driver/socketcan"]
gs_usb = ["piper-can/gs_usb", "piper-driver/gs_usb"]

[dependencies]
piper-driver = { workspace = true, default-features = false }
piper-can = { workspace = true, default-features = false }
piper-protocol = { workspace = true }
piper-tools = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
spin_sleep = { workspace = true }
crossbeam-channel = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, optional = true }
hex = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
sha2 = { workspace = true }
mio = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
serial_test = { workspace = true }
