[package]
name = "piper-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IO management and state synchronization driver for Piper robot arms"
readme = "../../README.md"

[features]
default = []
# Real-time thread priority support (Linux/macOS/Windows)
realtime = ["dep:thread-priority"]
# Mock mode for testing without hardware
mock = ["piper-can/mock"]

[dependencies]
piper-protocol = { workspace = true }
piper-can = { workspace = true }
crossbeam-channel = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smallvec = { workspace = true }
thread-priority = { workspace = true, optional = true }
spin_sleep = { workspace = true }
