[package]
name = "piper-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IO management and state synchronization driver for Piper robot arms"
readme = "../../README.md"

[features]
default = ["auto-backend"]
# Real-time thread priority support (Linux/macOS/Windows)
realtime = ["dep:thread-priority"]
# Mock mode for testing without hardware
mock = ["piper-can/mock"]
auto-backend = ["piper-can/auto-backend"]
socketcan = ["piper-can/socketcan"]
gs_usb = ["piper-can/gs_usb"]

[dependencies]
piper-protocol = { workspace = true }
piper-can = { workspace = true, default-features = false }
crossbeam-channel = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smallvec = { workspace = true }
thread-priority = { workspace = true, optional = true }
spin_sleep = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
