[package]
name = "piper-physics"
version = "0.0.3"
edition = "2021"
description = "Physics calculations for Piper robot including gravity compensation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/piper-sdk-rs"

[dependencies]
piper-sdk = { path = "../piper-sdk" }

# 必选依赖（通过 re-export 模式）
nalgebra = { version = "0.32", features = ["std"] }
mujoco-rs = { version = "2.3" }  # MuJoCo physics engine (下载由 just 处理)

# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"

[build-dependencies]
# 极简版 build.rs（只处理 RPATH），无需额外依赖

[dev-dependencies]
# 用于测试
piper-sdk = { path = "../piper-sdk" }
env_logger = "0.10"
approx = "0.5"

# 用于真实机械臂控制的example
ctrlc = "3.4"
