[package]
name = "piper-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level CAN protocol encoding/decoding for Piper robot arms"
readme = "../../README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bilge = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
bincode = "1.3"
serde_json = { workspace = true }
trybuild = { workspace = true }
