[package]
name = "piper-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified SDK for Piper robot arm control with real-time performance"

[features]
default = []
serde = ["piper-client/serde", "piper-can/serde", "piper-protocol/serde"]

[dependencies]
piper-client = { workspace = true }
piper-driver = { workspace = true }
piper-can = { workspace = true }
piper-protocol = { workspace = true }
# ✅ 日志初始化宏支持
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
proptest = { workspace = true }
ctrlc = { workspace = true }
rand = { workspace = true }
# For examples and tests (platform-specific)
libc = { workspace = true }
rusb = { workspace = true }

# Linux-only dev dependencies
[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.30", features = ["poll", "socket", "uio"] }
socketcan = "3.5"
