[package]
name = "piper-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified SDK for Piper robot arm control with real-time performance"
readme = "../../README.md"

[features]
default = ["auto-backend"]
serde = ["piper-client/serde", "piper-can/serde", "piper-protocol/serde"]
mock = ["piper-client/mock", "piper-driver/mock", "piper-can/mock"]
auto-backend = [
    "piper-client/auto-backend",
    "piper-driver/auto-backend",
    "piper-can/auto-backend",
    "target-socketcan",
    "target-gs-usb",
]
socketcan = [
    "piper-client/socketcan",
    "piper-driver/socketcan",
    "piper-can/socketcan",
    "target-socketcan",
]
gs_usb = [
    "piper-client/gs_usb",
    "piper-driver/gs_usb",
    "piper-can/gs_usb",
    "target-gs-usb",
]
# Internal markers used only by Cargo target `required-features`.
target-socketcan = []
target-gs-usb = []

[dependencies]
piper-client = { workspace = true, default-features = false }
piper-driver = { workspace = true, default-features = false }
piper-can = { workspace = true, default-features = false }
piper-protocol = { workspace = true }
# ✅ 日志初始化宏支持
log = "0.4"
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
piper-driver = { workspace = true }
piper-control = { workspace = true }
piper-tools = { workspace = true }
crossbeam-channel = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
proptest = { workspace = true }
ctrlc = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
# For examples and tests (platform-specific)
libc = { workspace = true }
rusb = { workspace = true }

# Linux-only dev dependencies
[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.30", features = ["poll", "socket", "uio"] }
socketcan = "3.5"

[[example]]
name = "gs_usb_direct_test"
path = "examples/gs_usb_direct_test.rs"
required-features = ["target-gs-usb"]

[[example]]
name = "iface_check"
path = "examples/iface_check.rs"
required-features = ["target-socketcan"]

[[test]]
name = "gs_usb_integration_tests"
path = "tests/gs_usb_integration_tests.rs"
required-features = ["target-gs-usb"]

[[test]]
name = "gs_usb_performance_tests"
path = "tests/gs_usb_performance_tests.rs"
required-features = ["target-gs-usb"]

[[test]]
name = "gs_usb_stage1_loopback_tests"
path = "tests/gs_usb_stage1_loopback_tests.rs"
required-features = ["target-gs-usb"]
