[package]
name = "piper-tools"
version.workspace = true
edition.workspace = true
authors = ["Piper SDK Team"]
license = "MIT OR Apache-2.0"
description = "Shared data structures and utilities for Piper applications"
repository = "https://github.com/yourusername/piper-sdk-rs"
readme = "README.md"

[features]
default = []
# ⭐ 完整功能（包含统计模块）
full = ["statistics"]
# ⭐ 统计功能（可选，加快编译）
statistics = ["dep:statrs"]

[dependencies]
# ✅ 只依赖协议层（无状态）
piper-protocol = { workspace = true }

# ✅ 序列化（必需）
serde = { workspace = true, features = ["derive"] }
bincode = "1.3"

# ✅ 错误处理
anyhow = "1.0"

# ✅ 统计库（可选，通过 feature flag 控制）
statrs = { version = "0.16", optional = true }

# ❌ 不要依赖 piper-client（避免循环依赖和编译时间）
# piper-client = { workspace = true }

# ❌ 不要依赖 piper-driver（避免引入硬件依赖）
# piper-driver = { workspace = true }

[dev-dependencies]
# 用于测试
serde_json = "1.0"
